Support for GetByKeyAndUniqueIdentity
