# src/CSharp/EasyMicroservices.StorageMicroservice.Domain/Contracts/Requests/GetByKeyRequestContract.cs
@@ -1,0 +1,9 @@
+﻿using EasyMicroservices.Cores.Contracts.Requests;
+
+namespace EasyMicroservices.StorageMicroservice.Contracts.Requests
+{
+    public class GetByKeyRequestContract : GetUniqueIdentityRequestContract
+    {
+        public string Key { get; set; }
+    }
+}
